--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,  // ⭐ ADD THIS LINE
     "target": "ES2021",
     "sourceMap": true,
     "outDir": "./dist",
