--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "npm": ">=9.0.0"
   },
   "scripts": {
-    "build": "npx nest build",
+    "build": "nest build",
+    "prebuild": "rm -rf dist || true",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "node dist/main",
-    "dev": "npx nest start --watch",
-    "start:dev": "npx nest start --watch -b swc --type-check",
-    "start:debug": "npx nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "node dist/main.js",
+    "dev": "nest start --watch",
+    "start:dev": "nest start --watch -b swc --type-check",
+    "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
